name:                ddd
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/ddd#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib, Account, Address, Bank
  build-depends:       base >= 4.7 && < 5, datetime, fclabels
  default-language:    Haskell2010

executable ddd-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ddd
                     , datetime
  default-language:    Haskell2010

test-suite ddd-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ddd
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/ddd
